# salidas-bot

./: .env.example  .gitignore  Dockerfile  README.md  app_gradio.py  main.py  pyproject.toml  requirements.txt  space_config.yaml
.github/workflows/: tests.yml
agent/: __init__.py  faq.py  memory.py  tools.py
backend/: __init__.py  api.py
memory/: __init__.py
scrapers/: __init__.py  clima.py  lugares.py
