[tool.poetry]
name = "salidas-bot"
version = "0.1.0"
description = "Bot inteligente para buscar salidas en Buenos Aires"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
smolagents = "^1.0.0"
groq = "^0.4.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
jinja2 = "^3.1.0"
chromadb = "^0.4.0"
pydantic = "^2.4.0"
sqlalchemy = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.11.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
